# xavyo

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  RUST_AUDIT_REPORT.md  SECURITY.md  clippy.toml  deny.toml  llms-full.txt  llms.txt  nx.json  package-lock.json  package.json  test-all-endpoints.sh  test-all-results.md  test-roadmap-features.sh  test-roadmap-results.md  test-roadmap-v4.sh  tsconfig.base.json
apps/ext-authz/: Cargo.toml
apps/ext-authz/src/: main.rs
apps/gateway/: Cargo.toml
apps/gateway/config/: gateway.example.yaml
apps/gateway/src/: config.rs  error.rs  main.rs
apps/idp-api/: .gitignore  Cargo.toml  project.json
apps/idp-api/src/: bootstrap.rs  config.rs  consumers.rs  health.rs  logging.rs  main.rs  metrics.rs  middleware.rs  openapi.rs  state.rs  telemetry.rs
apps/idp-api/tests/: auth_test.rs  cors_test.rs  docs_test.rs  health_test.rs  tracing_test.rs
apps/xavyo-cli/: CRATE.md  Cargo.toml
apps/xavyo-cli/src/: error.rs  lib.rs  main.rs
apps/xavyo-cli/tests/: agent_tests.rs  audit_tests.rs  auth_tests.rs  batch_tests.rs  completions_tests.rs  config_tests.rs  credential_rotation_tests.rs  diff_tests.rs  doctor_tests.rs  error_tests.rs  format_tests.rs  logging_tests.rs  mfa_tests.rs  offline_mode_tests.rs  plugin_tests.rs  proxy_tests.rs  rollback_tests.rs  session_tests.rs  shell_tests.rs  signup_tests.rs  sso_tests.rs  templates_tests.rs  tenant_tests.rs  tool_tests.rs  upgrade_tests.rs  webauthn_tests.rs
crates/xavyo-api-agents/: CRATE.md  Cargo.toml
crates/xavyo-api-agents/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-agents/tests/: anomaly_test.rs  assessment_test.rs  authorization_test.rs  credentials_test.rs  providers_test.rs
crates/xavyo-api-auth/: CRATE.md  Cargo.toml
crates/xavyo-api-auth/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-auth/tests/: audit_test.rs  delegated_admin_test.rs  device_test.rs  integration_test.rs  ip_restriction_test.rs  lockout_test.rs  org_mfa_policy_test.rs  org_password_policy_test.rs  org_policy_inheritance_test.rs  password_policy_test.rs  password_reset_test.rs  permission_escalation_test.rs  profile_test.rs  security_test.rs  webauthn_test.rs
crates/xavyo-api-authorization/: CRATE.md  Cargo.toml
crates/xavyo-api-authorization/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-authorization/tests/: audit_tests.rs  decision_tests.rs  integration_tests.rs
crates/xavyo-api-connectors/: CRATE.md  Cargo.toml
crates/xavyo-api-connectors/src/: error.rs  lib.rs  models.rs  router.rs
crates/xavyo-api-connectors/tests/: api_tests.rs  job_tracking_tests.rs  reconciliation_tests.rs
crates/xavyo-api-governance/: CRATE.md  Cargo.toml
crates/xavyo-api-governance/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-governance/tests/: archetype_lifecycle_tests.rs  batch_simulation_integration_tests.rs  bulk_action_tests.rs  catalog_tests.rs  delegation_tests.rs  escalation_audit_tests.rs  escalation_notification_tests.rs  escalation_tests.rs  gdpr_metadata_tests.rs  identity_merge_integration_tests.rs  identity_merge_service_tests.rs  integration_test.rs  lifecycle_condition_tests.rs  lifecycle_config_tests.rs  lifecycle_test.rs  meta_role_audit_tests.rs  meta_role_cascade_integration_tests.rs  meta_role_cascade_tests.rs  meta_role_conflict_tests.rs  meta_role_integration_tests.rs  meta_role_matching_tests.rs  meta_role_simulation_tests.rs  meta_role_tests.rs  micro_cert_audit_tests.rs  micro_cert_creation_tests.rs  micro_cert_decision_tests.rs  micro_cert_expiration_tests.rs  micro_cert_integration_tests.rs  micro_cert_manager_tests.rs  micro_cert_reviewer_tests.rs  micro_cert_sod_tests.rs  micro_cert_trigger_crud_tests.rs  micro_cert_trigger_tests.rs  nhi_certification_tests.rs  nhi_integration_tests.rs  nhi_request_tests.rs  nhi_risk_tests.rs  nhi_service_tests.rs  nhi_suspension_tests.rs  nhi_usage_tests.rs  (+28 more)
crates/xavyo-api-import/: CRATE.md  Cargo.toml
crates/xavyo-api-import/src/: error.rs  lib.rs  models.rs  router.rs  validation.rs
crates/xavyo-api-import/tests/: integration_tests.rs
crates/xavyo-api-nhi/: CRATE.md  Cargo.toml
crates/xavyo-api-nhi/src/: error.rs  lib.rs  router.rs  state.rs
crates/xavyo-api-nhi/tests/: integration_tests.rs
crates/xavyo-api-oauth/: CRATE.md  Cargo.toml
crates/xavyo-api-oauth/src/: csrf.rs  error.rs  lib.rs  router.rs
crates/xavyo-api-oauth/tests/: discovery_test.rs  tenant_isolation_test.rs  token_exchange_test.rs
crates/xavyo-api-oidc-federation/: CRATE.md  Cargo.toml
crates/xavyo-api-oidc-federation/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-oidc-federation/tests/: idp_interop_tests.rs
crates/xavyo-api-saml/: CRATE.md  Cargo.toml
crates/xavyo-api-saml/docs/: aws-sso.md  salesforce.md  servicenow.md  workday.md
crates/xavyo-api-saml/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-saml/tests/: group_assertion_tests.rs  interop_tests.rs  security_tests.rs
crates/xavyo-api-scim/: CRATE.md  Cargo.toml
crates/xavyo-api-scim/src/: error.rs  lib.rs  router.rs
crates/xavyo-api-scim/tests/: compliance_tests.rs  idp_interop_tests.rs  quirks_validation.rs
crates/xavyo-api-social/: CRATE.md  Cargo.toml
crates/xavyo-api-social/src/: error.rs  extractors.rs  (+2 more)
crates/xavyo-api-tenants/: CRATE.md  Cargo.toml
crates/xavyo-api-users/: CRATE.md  Cargo.toml
crates/xavyo-auth/: CRATE.md  Cargo.toml
crates/xavyo-authorization/: CRATE.md  Cargo.toml
crates/xavyo-connector/: CRATE.md  Cargo.toml
crates/xavyo-connector-database/: CRATE.md  Cargo.toml
crates/xavyo-connector-entra/: CRATE.md  Cargo.toml
crates/xavyo-connector-ldap/: CRATE.md  Cargo.toml
crates/xavyo-connector-rest/: CRATE.md  Cargo.toml
crates/xavyo-core/: CRATE.md  Cargo.toml
crates/xavyo-db/: CRATE.md  Cargo.toml
crates/xavyo-events/: CRATE.md  Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_claims_builder.rs  fuzz_jwt_decode.rs  fuzz_password_hash.rs  fuzz_token_hash.rs  fuzz_uuid_parsing.rs
(+4718 files in other folders)
