[workspace]
resolver = "2"
members = [
  "apps/idp-api",
  "apps/gateway",
  "apps/xavyo-cli",
  "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xavyo Team <pascal@heartbit.ai>"]
license = "BSL-1.1"
repository = "https://github.com/xavyo/xavyo"
homepage = "https://xavyo.net"
documentation = "https://github.com/xavyo/xavyo#readme"
keywords = ["identity", "authentication", "oauth2", "iam", "ai-agents"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

# Database (default-features = false to exclude mysql/sqlite and avoid rsa vulnerability)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
dotenvy = "0.15"
base64 = "0.22"

# OpenTelemetry
opentelemetry = { version = "0.27", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", default-features = false, features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "0.28"
opentelemetry-semantic-conventions = "0.27"

# Prometheus metrics
prometheus-client = "0.22"

# Regex
regex = "1.10"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Async utilities
async-trait = "0.1"

# Random number generation
rand = "0.8"

# Testing
tokio-test = "0.4"
axum-test = "15.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = false  # Disabled for faster builds (was: true)
strip = "debuginfo"
