[package]
name = "ext-authz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone ext_authz gRPC server for AgentGateway integration"

[[bin]]
name = "ext-authz"
path = "src/main.rs"

[dependencies]
# Internal crates
xavyo-ext-authz = { path = "../../crates/xavyo-ext-authz" }
xavyo-authorization = { path = "../../crates/xavyo-authorization" }
xavyo-db = { path = "../../crates/xavyo-db" }

# gRPC
tonic = { version = "0.12", features = ["transport"] }
tonic-health = "0.12"

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
dotenvy = { workspace = true }
