[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "xavyo API Gateway - unified routing, auth, and rate limiting"
authors = ["xavyo Team"]
license.workspace = true
publish.workspace = true

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "util"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }

# HTTP client for backends
reqwest = { workspace = true }

# Rate limiting
governor = "0.6"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
regex = "1"
once_cell = "1"

# Internal crates
xavyo-auth = { path = "../../crates/xavyo-auth" }
xavyo-core = { path = "../../crates/xavyo-core" }

[dev-dependencies]
axum-test = { workspace = true }
tokio-test = { workspace = true }
wiremock = "0.6"

[[bin]]
name = "gateway"
path = "src/main.rs"
