[package]
name = "xavyo-api-agents"
version = "0.1.0"
edition = "2021"
description = "AI Agent Security API for xavyo - Agent management, tool authorization, and audit logging"
license = "BSL-1.1"
repository = "https://github.com/xavyo/xavyo"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Internal dependencies
xavyo-core = { path = "../xavyo-core" }
xavyo-auth = { path = "../xavyo-auth" }
xavyo-db = { path = "../xavyo-db" }
xavyo-tenant = { path = "../xavyo-tenant" }
xavyo-nhi = { path = "../xavyo-nhi" }
xavyo-events = { path = "../xavyo-events", optional = true, features = ["kafka"] }
xavyo-secrets = { path = "../xavyo-secrets", features = ["vault-provider"] }

# Async trait for DynamicSecretProvider
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI documentation
utoipa = { workspace = true, optional = true }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# JSON Schema validation for MCP tool parameters
jsonschema = "0.18"

# HTTP client for webhook delivery
reqwest = { version = "0.12", features = ["json"] }

# URL parsing
url = "2.5"
urlencoding = "2.1"

# HMAC signing for webhooks
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Thread-safe rate limiting (DashMap for <100ms authorization)
dashmap = "5.5"

# Encryption for credential values (F120)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Decimal precision for anomaly detection
rust_decimal = { version = "1.33", features = ["maths"] }

# HTTP types
http = "1.0"

# AWS SDK for STS AssumeRole (F121)
aws-config = { version = "1", optional = true }
aws-sdk-sts = { version = "1", optional = true }

# JWT decoding for K8s token verification (F121)
jsonwebtoken = "9"

# PKI/Certificate generation and parsing (F127)
rcgen = "0.13"
x509-parser = { version = "0.16", features = ["verify"] }
openssl = "0.10"
pem = "3.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
axum-test = "15.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
integration = []
openapi = ["utoipa"]
kafka = ["xavyo-events"]
aws-federation = ["aws-config", "aws-sdk-sts"]
