[package]
name = "xavyo-api-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication API endpoints for xavyo"
license = "BSL-1.1"
publish = false
repository = "https://github.com/xavyo/xavyo"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Internal dependencies
xavyo-core = { path = "../xavyo-core" }
xavyo-auth = { path = "../xavyo-auth" }
xavyo-db = { path = "../xavyo-db" }
xavyo-tenant = { path = "../xavyo-tenant" }
xavyo-webhooks = { path = "../xavyo-webhooks" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI documentation
utoipa = { workspace = true }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"

# Random for token generation
rand = "0.8"

# Thread-safe primitives
parking_lot = "0.12"
dashmap = "5.5"

# Database (for token storage)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }

# Hashing for refresh tokens
sha2 = "0.10"
hex = "0.4"

# Base64 for refresh token encoding
base64 = "0.22"

# HTTP types
http = "1.0"

# Email sending (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Constant-time comparison for security
subtle = "2.5"

# Revocation cache (F082)
moka = { version = "0.12", features = ["future"] }

# HMAC for CSRF tokens (F082)
hmac = "0.12"

# RSA key generation for key rotation (F082)
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["pem"] }

# Async trait support
async-trait = "0.1"

# AWS SES (optional)
aws-config = { version = "1", optional = true }
aws-sdk-sesv2 = { version = "1", optional = true }

# MFA TOTP dependencies
totp-rs = { version = "5.6", features = ["gen_secret", "qr"] }

# IP restriction dependencies
ipnetwork = "0.20"
aes-gcm = "0.10"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
data-encoding = "2.6"

# Custom branding dependencies
axum-extra = { version = "0.9", features = ["multipart"] }
handlebars = "5.1"
ammonia = "3.3"

# WebAuthn MFA dependencies
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }
webauthn-rs-proto = "0.5"
url = "2.5"
ciborium = "0.2"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
axum-test = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1.4"

[features]
default = []
integration = []
aws-ses = ["aws-config", "aws-sdk-sesv2"]
