[package]
name = "xavyo-api-import"
version = "0.1.0"
edition = "2021"
description = "Bulk user import via CSV upload with invitation flows for xavyo"
license = "BSL-1.1"
publish = false

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI documentation
utoipa = { workspace = true }

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# CSV parsing
csv = "1.3"

# Hashing (SHA-256 for file hash + token hash)
sha2 = "0.10"

# Random token generation
rand = "0.8"

# HTML sanitization
ammonia = "4"

# Async trait
async-trait = "0.1"

# Hex encoding
hex = "0.4"

# Base64 encoding (for token generation)
base64 = { workspace = true }

# Constant-time comparison
subtle = "2.5"

# Internal crates
xavyo-core = { path = "../xavyo-core" }
xavyo-db = { path = "../xavyo-db" }
xavyo-auth = { path = "../xavyo-auth" }
xavyo-api-auth = { path = "../xavyo-api-auth" }
xavyo-tenant = { path = "../xavyo-tenant" }
xavyo-webhooks = { path = "../xavyo-webhooks" }

[features]
default = []
openapi = ["utoipa/default"]
integration = []  # Feature flag for integration tests requiring real PostgreSQL

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
