[package]
name = "xavyo-api-oidc-federation"
version = "0.1.0"
edition = "2021"
description = "OIDC Federation API for external Identity Provider integration"
license = "BSL-1.1"
publish = false

[dependencies]
# OIDC and OAuth2
openidconnect = { version = "4.0", default-features = false, features = ["reqwest", "rustls-tls"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Encryption
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI documentation
utoipa = { workspace = true }

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# URL handling
url = "2.5"

# Base64 encoding
base64 = "0.22"

# Internal dependencies
xavyo-core = { path = "../xavyo-core" }
xavyo-auth = { path = "../xavyo-auth" }
xavyo-db = { path = "../xavyo-db" }
xavyo-tenant = { path = "../xavyo-tenant" }

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
